Fix login & register redirect issue, closes #14
This commit resolves a bunch of bugs that emerged due to changes to the Flask-Login API. The userid issue probably stems from a divergence between the hosted version and the OSS version at some point.

Signed-off-by: Asad Dhamani <dhamaniasad@gmail.com>

--- a/crestify/templates/manager/base.html
+++ b/crestify/templates/manager/base.html
@@ -72,7 +72,7 @@
                         <h3 class="panel-title" id="tags_panel_title">Tags</h3>
                     </div>
                     <div class="panel-body">
-                    {% if user_tags is not None %}
+                    {% if user_tags is not none %}
                         {% for tag in user_tags %}
                             {% if request.args.get('tags') != None %}
                                 <a class="text-muted"
