--- a/crestify/templates/manager/base.html
+++ b/crestify/templates/manager/base.html
@@ -23,7 +23,7 @@
             } catch (e) {
             }
         </script>
-        <link href="{{url_for('static', filename='css/site.css')}}" >
+        <link rel="stylesheet" href="{{url_for('static', filename='css/site.css')}}" >
         <title>
             {% block title %} {{ title }} {% endblock %} - Crestify
         </title>
