--- a/crestify/templates/manager/bookmark_new.html
+++ b/crestify/templates/manager/bookmark_new.html
@@ -50,4 +50,7 @@ create: function(input) {
 		</div>
 	</div>
 </div>
+    <script type="text/javascript">
+        mixpanel.track('New Bookmark Page Opened');
+    </script>
 {% endblock %}
