--- a/crestify/templates/manager/settings.html
+++ b/crestify/templates/manager/settings.html
@@ -171,4 +171,7 @@
 	<script type="text/javascript">
 	new Clipboard('.copybtn');
 	</script>
+    <script type="text/javascript">
+        mixpanel.track('Settings Page Opened');
+    </script>
 {% endblock %}
