--- a/crestify/templates/manager/tab_view.html
+++ b/crestify/templates/manager/tab_view.html
@@ -24,4 +24,7 @@
 		{% endfor %}
 	}
 </script>
-{% endblock %}
+    <script type="text/javascript">
+        mixpanel.track('Tab View Opened');
+    </script>
+	{% endblock %}
