--- a/crestify/templates/manager/tabs_list.html
+++ b/crestify/templates/manager/tabs_list.html
@@ -48,6 +48,9 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript">
+        mixpanel.track('Tab List Opened');
+    </script>
     <style>
         a.editable-click.editable-disabled:hover {
             color: #585858;
