--- a/crestify/templates/manager/tabs_new.html
+++ b/crestify/templates/manager/tabs_new.html
@@ -27,4 +27,7 @@ New Tab Set
             </div>
 			</div>
     </div>
+    <script type="text/javascript">
+        mixpanel.track('New Tab Page Opened');
+    </script>
 {% endblock %}
