--- a/crestify/templates/security/login_user.html
+++ b/crestify/templates/security/login_user.html
@@ -13,14 +13,14 @@
 						     action="{{ url_for_security('login') }}">
 				{{ login_user_form.hidden_tag() }}
 				<div class="form-group">
-					{{ login_user_form.email.label(class_="control-label") }}
-					{{ render_field(login_user_form.email, class_="form-control",
+{#					{{ login_user_form.email.label(class_="control-label") }}#}
+					{{ render_field_with_errors(login_user_form.email, class_="form-control",
 					required="true", autofocus="true",
 					title="Please enter you email address") }}
 				</div>
 				<div class="form-group">
-					{{ login_user_form.password.label(class_="control-label") }}
-					{{ render_field(login_user_form.password, class_="form-control",
+{#					{{ login_user_form.password.label(class_="control-label") }}#}
+					{{ render_field_with_errors(login_user_form.password, class_="form-control",
 					required="true", title="Please enter you password") }}
 				</div>
 				<div id="loginErrorMsg" class="alert alert-error hide">Wrong username of password</div>
